--- a/styles/main-html.scss
+++ b/styles/main-html.scss
@@ -48,7 +48,7 @@ $primary-color: #1655b4;
     color: #ffffff;
   }
 
-  button {
+  .task-button {
     margin-top: 10%;
     background-color: inherit;
     border: 0px;
