--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
   <script type="text/javascript" src="/scripts/app.js"></script>
   <script type="text/javascript" src="/scripts/modal.js"></script>
-  <!-- <script type="text/javascript" src="/scripts/sortable.js"></script> -->
+  <script type="text/javascript" src="/scripts/sortable.js"></script>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
@@ -21,8 +21,7 @@
 
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/jquery-sortablejs@latest/jquery-sortable.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.13.0/Sortable.min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/jquery-sortablejs@latest/jquery-sortable.js"></script>
 
 </head>
 
@@ -73,29 +72,28 @@
       <!-- this is the to watch card -->
       <div class="category-card">
         <h5>things to watch</h5>
-        <ul id="to-watch">
+        <ul id="towatch">
         </ul>
 
       </div>
       <!-- this is the to eat card -->
       <div class="category-card">
         <h5>places to eat at</h5>
-
-        <ul id="to-eat">
+        <ul id="toeat">
         </ul>
       </div>
 
       <!-- this is the to read card -->
       <div class="category-card">
         <h5>books to read</h5>
-        <ul id="to-read">
+        <ul id="toread">
         </ul>
       </div>
 
       <!-- this is the to buy card -->
       <div class="category-card">
         <h5>things to buy</h5>
-        <ul id="to-buy">
+        <ul id="tobuy">
         </ul>
       </div>
 
@@ -104,6 +102,7 @@
 
   </main>
   <script src="./scripts/modal.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.13.0/Sortable.min.js"></script>
 </body>
 
 </html>
