--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,9 +60,13 @@
     <!-- the button to add a task -->
     <div class="add-task">
       <form id="tasksform">
-        <textarea name="name" id="textbox"></textarea>
+        <textarea name="name" id="textbox" placeholder="add item"></textarea>
       <button name="task" class="taskbutton"><i class="fas fa-feather fa-lg"></i></button>
       </form>
+    </div>
+
+    <div>
+
     </div>
 
 
@@ -72,14 +76,14 @@
       <!-- this is the to watch card -->
       <div class="category-card">
         <h5>things to watch</h5>
-        <ul id="towatch">
-        </ul>
-
+          <ul id="towatch">
+          </ul>
       </div>
       <!-- this is the to eat card -->
       <div class="category-card">
         <h5>places to eat at</h5>
         <ul id="toeat">
+          
         </ul>
       </div>
 
