--- a/styles/main-html.scss
+++ b/styles/main-html.scss
@@ -46,6 +46,7 @@ $primary-color: #1655b4;
   ::placeholder {
     font-weight: 400;
     color: #ffffff;
+    font-size: 1.1em;
   }
 
   .taskbutton {
@@ -60,8 +61,9 @@ $primary-color: #1655b4;
     margin-left: 5%;
 
     i {
-      margin-right: 5%;
-      margin-left: 10%;
+      display: inline;
+      margin-right: 0%;
+      margin-left: 0%;
     }
 
     i:hover {
@@ -79,4 +81,10 @@ $primary-color: #1655b4;
   -webkit-transition:all .3s linear;
   -o-transition:all .3s linear;
   -moz-transition:all .3s linear;    
+}
+
+.deletetask {
+  background-color: inherit;
+  border: none;
+  display: inline;
 }
