--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -42,14 +42,17 @@ body {
     padding-left: 10%;
     margin-top: -2%;
     list-style-type: none;
-    // display: flex;
-    // flex-direction: column;
+    display: flex;
+    flex-direction: column;
   }
 
   ul li {
     position: relative;
     padding-left: 24px;
     padding-bottom: 10px;
+    display: flex;
+
+    
 
   }
 
