--- a/views/index.ejs
+++ b/views/index.ejs
@@ -101,6 +101,13 @@
         </ul>
       </div>
 
+      <!-- this is the to do card, anything that doesn't fit into the other categories -->
+      <div class="category-card-to-do">
+        <h5>miscellaneous to-do list</h5>
+        <ul id="todo">
+        </ul>
+      </div>
+
     </div>
 
 
