july 1 gbooks, no wolfram

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@
     <!-- Modal content -->
     <div class="modal-content">
       <span class="close">&times;</span>
-      <form method="UPDATE" action="users" id="edit-profile">
+      <form method="UPDATE" action="/" id="edit-profile">
         <h3 class="edit">edit profile</h3>
         <label for="username">email:</label><p>
         <input name="username" id="username" />
