--- a/styles/main-html.scss
+++ b/styles/main-html.scss
@@ -71,6 +71,7 @@ $primary-color: #1655b4;
       -webkit-transition:all .3s linear;
       -o-transition:all .3s linear;
       -moz-transition:all .3s linear;  
+      cursor: crosshair;
     }
   }
 }
