--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,13 @@
 <head>
   <title>to-do</title>
 
+  <!-- styling imports -->
   <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
   <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   <link rel="stylesheet" href="/styles/main-html.css" type="text/css" />
   <link rel="stylesheet" href="/styles/cards.css" type="text/css" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet">
 
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
   <script type="text/javascript" src="/scripts/app.js"></script>
@@ -57,6 +59,7 @@
 
   <!-- tasks view here -->
   <main class="container">
+    <h5 class="animated swing" id="title">get sh*t done.</h5>
     <!-- the button to add a task -->
     <div class="add-task">
       <form id="tasksform">
