--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,122 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>to-do</title>
 
-<head>
-  <title>to-do</title>
+    <!-- styling imports -->
+    <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
+    <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/main-html.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/cards.css" type="text/css" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://static.tumblr.com/svdghan/KAtqnv9cj/hoverlink.css"
+      rel="stylesheet"
+    />
 
-  <!-- styling imports -->
-  <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
-  <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/main-html.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/cards.css" type="text/css" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet">
+    <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+    <script type="text/javascript" src="/scripts/app.js"></script>
+    <script type="text/javascript" src="/scripts/modal.js"></script>
+    <script type="text/javascript" src="/scripts/sortable.js"></script>
 
-  <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-  <script type="text/javascript" src="/scripts/app.js"></script>
-  <script type="text/javascript" src="/scripts/modal.js"></script>
-  <script type="text/javascript" src="/scripts/sortable.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- External JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-sortablejs@latest/jquery-sortable.js"></script>
 
-  <!-- External JS -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jquery-sortablejs@latest/jquery-sortable.js"></script>
+    <script type="text/javascript">
+      // Wait for document to load
+      document.addEventListener("DOMContentLoaded", function(event) {
+        document.documentElement.setAttribute("dark-mode");
+      });
+    </script>
 
-</head>
+  </head>
 
-<body>
-  <!-- sidebar w/ profile icon -->
-  <div class="sidebar">
-    <aside>
-      <button id="myBtn"><img src="https://i.ibb.co/55wr5sW/profile-icon.png" alt="profile-icon"></button>
-    </aside>
-  </div>
+  <body>
+    <!-- loading screen animation
+    <div class="loader-wrapper">
+      <span class="loader"><span class="loader-inner"></span></span>
+    </div> -->
 
-  <!-- The Modal -->
-  <div id="myModal" class="modal">
+    <!-- sidebar w/ profile icon -->
+    <div class="sidebar">
+      <aside>
+        <button id="myBtn">
+          <img
+            src="https://i.ibb.co/55wr5sW/profile-icon.png"
+            alt="profile-icon"
+          />
+        </button>
+      </aside>
+    </div>
 
-    <!-- Modal content -->
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <form method="UPDATE" action="users" id="edit-profile">
-        <h3 class="edit">edit profile</h3>
-        <label for="username">email:</label><p>
-        <input name="username" id="username" />
-        <p>
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+      <!-- Modal content -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <form method="UPDATE" action="users" id="edit-profile">
+          <h3 class="edit">edit profile</h3>
+          <label for="username">email:</label>
+          <p>
+            <input name="username" id="username" />
+          </p>
+
+          <p>
+            <label for="password">password:</label>
+          </p>
+
+          <p>
+            <input name="password" id="password" />
+          </p>
+
+          <p>
+            <button type="submit" class="edit-button">submit!</button>
+          </p>
+        </form>
+      </div>
+    </div>
+
+    <!-- tasks view here -->
+    <main class="container">
+      <h5 class="animated swing" id="title">get sh*t done!</h5>
+      <!-- <button id="dark-mode" onclick="dark()" type="button"><i class="far fa-moon"></i></button> -->
+
+      <!-- the button to add a task -->
+      <div class="add-task">
+        <form id="tasksform">
+            <input name="name" id="textbox" placeholder="add item"></input>
+          <button name="task" class="taskbutton">
+            <i class="fas fa-feather fa-lg"></i>
+          </button>
+        </form>
+      </div>
+
+      <div></div>
+
+      <!-- the div for the 4 category cards -->
+      <div class="cards">
+        <!-- this is the to watch card -->
+        <div class="category-card">
+          <h5><i class="fas fa-film fa-lg"></i> things to watch</h5>
+          <ul id="towatch"></ul>
+        </div>
+        <!-- this is the to eat card -->
+        <div class="category-card">
+          <h5> <i class="fas fa-utensils fa-lg"></i> places to eat at</h5>
+          <ul id="toeat"></ul>
+        </div>
+
+        <!-- this is the to read card -->
+        <div class="category-card">
+          <h5><i class="fas fa-book fa-lg"></i> books to read</h5>
+          <ul id="toread"></ul>
+        </div>
+
+        <!-- this is the to buy card -->
+        <div class="category-card">
+          <h5><i class="far fa-credit-card fa-lg"></i> things to buy</h5>
+          <ul id="tobuy"></ul>
+        </div>
+
+        <!-- this is the to do card, anything that doesn't fit into the other categories -->
+        <div class="category-card-to-do">
+          <h5><i class="fas fa-clipboard-list fa-lg"></i> miscellaneous to-do list</h5>
+          <ul id="todo"></ul>
+        </div>
+      </div>
+    </main>
     
-        <label for="password">password:</label><p>
-        <input name="password" id="password" />
-        <p>
-    
-        <button type="submit" class="edit-button">submit!</button>
-      </form>
-    </div>
-
-  </div>
-
-  <!-- tasks view here -->
-  <main class="container">
-    <h5 class="animated swing" id="title">get sh*t done.</h5>
-    <!-- the button to add a task -->
-    <div class="add-task">
-      <form id="tasksform">
-        <textarea name="name" id="textbox" placeholder="add item"></textarea>
-      <button name="task" class="taskbutton"><i class="fas fa-feather fa-lg"></i></button>
-      </form>
-    </div>
-
-    <div>
-
-    </div>
-
-
-    <!-- the div for the 4 category cards -->
-    <div class="cards">
-
-      <!-- this is the to watch card -->
-      <div class="category-card">
-        <h5>things to watch</h5>
-          <ul id="towatch">
-          </ul>
-      </div>
-      <!-- this is the to eat card -->
-      <div class="category-card">
-        <h5>places to eat at</h5>
-        <ul id="toeat">
-          
-        </ul>
-      </div>
-
-      <!-- this is the to read card -->
-      <div class="category-card">
-        <h5>books to read</h5>
-        <ul id="toread">
-        </ul>
-      </div>
-
-      <!-- this is the to buy card -->
-      <div class="category-card">
-        <h5>things to buy</h5>
-        <ul id="tobuy">
-        </ul>
-      </div>
-
-      <!-- this is the to do card, anything that doesn't fit into the other categories -->
-      <div class="category-card-to-do">
-        <h5>miscellaneous to-do list</h5>
-        <ul id="todo">
-        </ul>
-      </div>
-
-    </div>
-
-
-  </main>
-  <script src="./scripts/modal.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.13.0/Sortable.min.js"></script>
-</body>
-
+    <script>
+    function dark() {
+      const element = document.getElementsByClassName("category-cards");
+      document.body.classList.addClass('dark-mode-cards');
+    }
+    </script>
+    <!-- <script>
+      $(window).on("load", function () {
+        $(".loader-wrapper").fadeOut("slow");
+      });
+    </script> -->
+    <script src="./scripts/modal.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.13.0/Sortable.min.js"></script>
+  </body>
 </html>
