adds condition for empty text area

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>to-do</title>
+    <title>let's get sh*t done!</title>
 
     <!-- styling imports -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
