--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,10 +54,7 @@
     <div class="sidebar">
       <aside>
         <button id="myBtn">
-          <img
-            src="https://i.ibb.co/55wr5sW/profile-icon.png"
-            alt="profile-icon"
-          />
+          <img src="https://i.ibb.co/pR1Zwc7/profile-icon.png" alt="profile-icon" border="0">
         </button>
       </aside>
     </div>
