--- a/styles/main-html.scss
+++ b/styles/main-html.scss
@@ -1,19 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap");
 
-$font-stack: 'Inter', sans-serif;
-$primary-color: #1655b4;
+$font-stack: "Inter", sans-serif;
+$primary-color: #5c7064;
 
 // main body stuff
 
 .container {
-  background-color: #EEF4FF;
+  background:#cfdbd5;
   display: inline-block;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  width: 92%;
+  width: 93%;
   height: inherit;
-
 }
 
 .add-task {
@@ -24,10 +23,10 @@ $primary-color: #1655b4;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  
+
   margin-top: 2%;
   margin-right: 5%;
-  background: linear-gradient(90deg, #3d75c9 0%, #69a4fe 73.7%);
+  background: #da667b;
   border-radius: 50px;
 
   #textbox {
@@ -46,7 +45,7 @@ $primary-color: #1655b4;
 
   ::placeholder {
     font-weight: 400;
-    color: #ffffff;
+    color: #f2e8cf;
     font-size: 1.1em;
   }
 
@@ -55,7 +54,7 @@ $primary-color: #1655b4;
     background-color: inherit;
     border: 0px;
     margin-left: 1%;
-    color: #ffffff;
+    color: #f2e8cf;
     font-weight: 500;
     font-size: 1.1em;
     width: 50px;
@@ -68,21 +67,21 @@ $primary-color: #1655b4;
     }
 
     i:hover {
-      color: #1655b4;
-      -webkit-transition:all .3s linear;
-      -o-transition:all .3s linear;
-      -moz-transition:all .3s linear;  
+      color: #849a8d;
+      -webkit-transition: all 0.3s linear;
+      -o-transition: all 0.3s linear;
+      -moz-transition: all 0.3s linear;
       cursor: crosshair;
     }
   }
 }
 
 .add-task:hover {
-  box-shadow: 8px 8px 8px #c4dcff;
-  transition:all .3s linear;    
-  -webkit-transition:all .3s linear;
-  -o-transition:all .3s linear;
-  -moz-transition:all .3s linear;    
+  box-shadow: 8px 8px 8px #f2e8cf;
+  transition: all 0.3s linear;
+  -webkit-transition: all 0.3s linear;
+  -o-transition: all 0.3s linear;
+  -moz-transition: all 0.3s linear;
 }
 
 .deletetask {
